# hermes-platform-napcat

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
napcat_platform/: __init__.py  adapter.py
src/hermes_napcat_platform/: __init__.py
tests/: test_plugin_discovery.py
